# pc-monitor

./: .gitignore  README.md  justfile
code/: workspace.code-workspace
code/firmware/: Cargo.toml  build.sh
code/firmware/.cargo/: config
code/firmware/src/: main.rs
code/server/: Cargo.toml
code/server/src/: codec.rs  main.rs  statsampler.rs
code/types/: Cargo.toml
code/types/src/: lib.rs
model/: led_jig.scad
pcb/: cpu_graph_green_0.kicad_sch  cpu_graph_green_1.kicad_sch  cpu_graph_green_2.kicad_sch  cpu_graph_red_mem_readout.kicad_sch  fp-lib-table  front_panel.kicad_sch  microcontroller.kicad_sch  pc-monitor.kicad_pcb  pc-monitor.kicad_pro  pc-monitor.kicad_sch  template.kicad_wks
pcb/local.pretty/: LED_Rectangular_W7.0mm_H2.3mm.kicad_mod  auto_stepper.kicad_mod  auto_stepper_backing.kicad_mod
