[package]
name = "firmware"
version = "0.1.0"
edition = "2018"

[profile.dev]
opt-level = 3

[profile.release]
lto = true

[dependencies]
max7219 = "0.3.1"
postcard = { version = "0.7.3", default-features = false, features = [] }
types = { path = "../types", default-features = false, features = [] }
panic-halt = "0.2.0"
#ufmt = "0.1.0"
#nb = "1.0.0"
#pwm-pca9685 = "0.3.1"
#cfg-if = "1"
#paste = "1.0.0"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.avr-device]
version = "0.3.2"
features = ["atmega328p"]

#[dependencies.void]
#version = "1.0.2"
#default-features = false