[package]
name = "server"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
bytes = "1.1.0"
systemstat = "0.1.10"
heapless = "0.7.10"
postcard = { version = "0.7.3", features = ["use-std"] }
tokio = { version = "1.15.0", features = ["fs", "io-util", "rt", "macros", "time", "signal"] }
tokio-serial = "5.4.1"
tokio-util = { version = "0.6.9", features = ["codec"] }
log = "0.4.14"
eyre = "0.6.6"
color-eyre = "0.6.0"
clap = { version = "3.0.10", features = ["derive"] }
futures-util = "0.3.19"
simple_logger = "2.1.0"
types = { path = "../types" }